--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,11 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
 
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1773782_a15dzjo9x3u.css" />
-    <script src="//at.alicdn.com/t/font_1773782_a15dzjo9x3u.js"></script>
-<!--    <script src="https://files.cnblogs.com/files/quaint/sakuraPlus.js"></script>-->
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1773782_6t8b52jrnva.css" />
+    <script src="//at.alicdn.com/t/font_1773782_6t8b52jrnva.js"></script>
+    <script src="https://files.cnblogs.com/files/quaint/sakuraPlus.js"></script>
+    <script src="jquery.min.js"></script>
+    <script src="script.js"></script>
   </head>
   <body>
     <noscript>
@@ -19,3 +21,4 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
